# Exynos-driver-940-gpu

./: CMakeLists.txt  winlator_xclipse.json
.github/workflows/: build-android.yml
src/: layer_init.cpp  xclipse_wrapper.cpp
